# src/module/profile/profile.routes.js
@@ -1,14 +1,12 @@
 import express from "express";
 
-import { login } from "./auth.controller.js";
+import { getMe } from "./profile.controller.js";
+
 import authMiddleware from "../../middlewares/auth.middleware.js";
 import roleMiddleware from "../../middlewares/role.middleware.js";
 
 const router = express.Router();
 
-/**
- * PUBLIC
- */
-router.post("/login", login);
+router.get("/me", authMiddleware, getMe);
 
 export default router;
